--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 ---
-<div class="hentry" id="article-2">
+<div class="hentry">
   <h2 class="entry-title">
-    {{ title }}
+    {{ page.title }}
   </h2>
   <div class="vcard">
     Posted by <span class="fn">Gregor Schmidt</span>
   </div>
-  <abbr class="published" title="{{post.date | date_to_string}}">
-    ({{post.date | date_to_string}})
+  <abbr class="published" title="{{ page.date }}">
+    ({{ page.date | date: '%Y-%m-%d' }})
   </abbr>
   <br class="clear" />
   <div class="entry-content">
