updating layout with links to archive and google search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>{{ page.title }} - The Ruby Ahead</title>
+  <title>The Ruby Ahead: {{ page.title }}</title>
   <!-- Include Mephisto's default RSS feed -->
   <!--link href="/feed/atom.xml" rel="alternate" type="application/atom+xml" /-->
 
@@ -35,90 +35,20 @@
 
       <div id="sidebar">
         <div class="sidebar-node">
+          <h3>Navigation</h3>
+          <ul>
+            <li><a href="/archives/2010.html" title="Posts in 2010">Archive 2010</a></li>
+            <li><a href="/archives/2009.html" title="Posts in 2009">Archive 2009</a></li>
+            <li><a href="/archives/2008.html" title="Posts in 2008">Archive 2008</a></li>
+            <li><a href="/archives/2007.html" title="Posts in 2007">Archive 2007</a></li>
+            <li><a href="/about" title="about">about</a></li>
+          </ul>
+        </div>
+        
+        <div class="sidebar-node">
           <div id="search" class="search">
-
-            <form action="/search" id="sform" method="get" name="sform">
-              <p><input type="text" id="q" name="q" value="" /></p>
-            </form>
+            <script src="http://www.gmodules.com/ig/ifr?url=http://www.google.com/cse/api/007025135729232920831/cse/owtmo__u2mu/gadget&amp;synd=open&amp;w=200&amp;h=100&amp;title=The+Ruby+Ahead+-+Site+Search&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
           </div>
-        </div>
-
-        <div class="sidebar-node">
-          <h3>Archives</h3>
-          <ul>
-            <li><a href="/archives/2009/1" title="January 2009">January 2009</a> (1)</li>
-            <li><a href="/archives/2008/12" title="December 2008">December 2008</a> (0)</li>
-            <li><a href="/archives/2008/11" title="November 2008">November 2008</a> (0)</li>
-            <li><a href="/archives/2008/10" title="October 2008">October 2008</a> (0)</li>
-            <li><a href="/archives/2008/9" title="September 2008">September 2008</a> (0)</li>
-            <li><a href="/archives/2008/8" title="August 2008">August 2008</a> (0)</li>
-            <li><a href="/archives/2008/7" title="July 2008">July 2008</a> (0)</li>
-            <li><a href="/archives/2008/6" title="June 2008">June 2008</a> (0)</li>
-            <li><a href="/archives/2008/5" title="May 2008">May 2008</a> (0)</li>
-            <li><a href="/archives/2008/4" title="April 2008">April 2008</a> (1)</li>
-            <li><a href="/archives/2008/3" title="March 2008">March 2008</a> (3)</li>
-            <li><a href="/archives/2008/2" title="February 2008">February 2008</a> (5)</li>
-            <li><a href="/archives/2008/1" title="January 2008">January 2008</a> (2)</li>
-            <li><a href="/archives/2007/12" title="December 2007">December 2007</a> (0)</li>
-            <li><a href="/archives/2007/11" title="November 2007">November 2007</a> (2)</li>
-            <li><a href="/archives/2007/10" title="October 2007">October 2007</a> (2)</li>
-            <li><a href="/archives/2007/9" title="September 2007">September 2007</a> (3)</li>
-            <li><a href="/archives/2007/8" title="August 2007">August 2007</a> (0)</li>
-            <li><a href="/archives/2007/7" title="July 2007">July 2007</a> (0)</li>
-            <li><a href="/archives/2007/6" title="June 2007">June 2007</a> (4)</li>
-            <li><a href="/archives/2007/5" title="May 2007">May 2007</a> (3)</li>
-            <li><a href="/archives/2007/4" title="April 2007">April 2007</a> (3)</li>
-            <li><a href="/archives/2007/3" title="March 2007">March 2007</a> (6)</li>
-            <li><a href="/archives/2007/2" title="February 2007">February 2007</a> (2)</li>
-          </ul>
-        </div>
-        
-        <div class="sidebar-node">
-          <h3>Sections</h3>
-          <ul>
-            <li><a class="selected" href="/" title="home">home</a> (15)</li>
-            <li><a href="/about" title="about">about</a> (1)</li>
-          </ul>
-        </div>
-        
-        <div class="sidebar-node">
-          <h3>Tags</h3>
-          <ul><li>
-            <span style='font-size: 1em'><a href='/tags/applescript'>applescript</a></span>
-            <span style='font-size: 1em'><a href='/tags/cache_annotations'>cache_annotations</a></span>
-            <span style='font-size: 1em'><a href='/tags/caming'>caming</a></span>
-            <span style='font-size: 1em'><a href='/tags/camping'>camping</a></span>
-            <span style='font-size: 1em'><a href='/tags/contextr'>contextr</a></span>
-            <span style='font-size: 1em'><a href='/tags/doc'>doc</a></span>
-            <span style='font-size: 1em'><a href='/tags/editor'>editor</a></span>
-            <span style='font-size: 1em'><a href='/tags/euruko'>euruko</a></span>
-            <span style='font-size: 1em'><a href='/tags/future'>future</a></span>
-            <span style='font-size: 1em'><a href='/tags/gem'>gem</a></span>
-            <span style='font-size: 2em'><a href='/tags/general'>general</a></span>
-            <span style='font-size: 1em'><a href='/tags/i18n'>i18n</a></span>
-            <span style='font-size: 1em'><a href='/tags/interpreter'>interpreter</a></span>
-            <span style='font-size: 1em'><a href='/tags/markaby'>markaby</a></span>
-            <span style='font-size: 1em'><a href='/tags/mechanize'>mechanize</a></span>
-            <span style='font-size: 1em'><a href='/tags/mephisto'>mephisto</a></span>
-            <span style='font-size: 1em'><a href='/tags/merchandise'>merchandise</a></span>
-            <span style='font-size: 2em'><a href='/tags/meta'>meta</a></span>
-            <span style='font-size: 1em'><a href='/tags/mongrel'>mongrel</a></span>
-            <span style='font-size: 1em'><a href='/tags/multiple inheritance'>multiple inheritance</a></span>
-            <span style='font-size: 1em'><a href='/tags/offtopic'>offtopic</a></span>
-            <span style='font-size: 1em'><a href='/tags/performance'>performance</a></span>
-            <span style='font-size: 1em'><a href='/tags/plugin'>plugin</a></span>
-            <span style='font-size: 1em'><a href='/tags/rake'>rake</a></span>
-            <span style='font-size: 2em'><a href='/tags/ruby'>ruby</a></span>
-            <span style='font-size: 1em'><a href='/tags/ruby2ruby'>ruby2ruby</a></span>
-            <span style='font-size: 1em'><a href='/tags/rug-b'>rug-b</a></span>
-            <span style='font-size: 1em'><a href='/tags/rugb'>rugb</a></span>
-            <span style='font-size: 1em'><a href='/tags/skye'>skye</a></span>
-            <span style='font-size: 1em'><a href='/tags/talk'>talk</a></span>
-            <span style='font-size: 1em'><a href='/tags/test'>test</a></span>
-            <span style='font-size: 1em'><a href='/tags/twitter'>twitter</a></span>
-            <span style='font-size: 1em'><a href='/tags/warnings'>warnings</a></span>
-            <span style='font-size: 1em'><a href='/tags/wish'>wish</a></span>
-          </li></ul>
         </div>
 
         <div class="sidebar-node">
