--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>The Ruby Ahead: {{ page.title }}</title>
-  <!-- Include Mephisto's default RSS feed -->
-  <!--link href="/feed/atom.xml" rel="alternate" type="application/atom+xml" /-->
+  <link href="/feed/atom.xml" rel="alternate" type="application/atom+xml" />
 
   <script src="/javascripts/prototype.js" type="text/javascript"></script>
   <script src="/javascripts/scribbish.js" type="text/javascript"></script>
