a little about text on every page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,23 @@
       </div>
 
       <div id="sidebar">
+        <div class="sidebar-node" style='background: #ffd;'>
+          <p>
+            <img style='float:right;' src='http://www.gravatar.com/avatar/b1e6fa454ff8ac0a2fc321d38caf67b2?s=80'/>
+            <strong>The Ruby Ahead</strong> is my private blog. It once covered
+            the development of my Master's thesis and the occompanying code.
+          </p>
+          <p> 
+            My name is Gregor Schmidt. I often use the nick name 'schmidt' or
+            'schmidwisser'.
+          </p>
+          <p> 
+            I love to live in Berlin, Germany, have collected my online live at
+            <a href='http://www.nach-vorne.eu'>nach-vorne.eu</a>, and currently
+            employed at <a href='http://www.finn.de/'>finnlabs</a>.
+          </p>
+        </div>
+
         <div class="sidebar-node">
           <h3>Navigation</h3>
           <ul>
