--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -12,6 +12,9 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+
+    <link rel="alternate" type="application/atom+xml"
+          title="{{site.title}}" href="{{ BASE_PATH }}/atom.xml" />
   </head>
 
   <body>
