--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -4,6 +4,8 @@ layout: default
 <article class="post">
   <h1 class="post-title">{{ page.title }}</h1>
 
+  <img class="post-image" src="{{ page.image | prepend: site.baseurl }}" alt=""/>
+
   <div class="post-lead">
     {{ page.description | markdownify }}
   </div>
