--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -183,7 +183,7 @@
   width: 300px;
   padding: $spacing-unit / 2;
   margin: 0 $spacing-unit;
-  border: 1px solid $brand-color;
+  border: 1px solid $grey-color-light;
 
 
   @include media-query($on-palm) {
