--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -99,7 +99,7 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: $brand-color;
     }
 
     &:hover {
