--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,63 +1,35 @@
 <footer class="site-footer">
 
   <div class="wrapper">
+    <ul class="social-media-list">
+      <li>
+        <a href="https://github.com/schmidt">
+          <span class="icon">{% include icon-github.svg %}</span>
+          <span class="username">schmidt</span>
+        </a>
+      </li>
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+      <li>
+        <a href="https://twitter.com/schmidtwisser">
+          <span class="icon">{% include icon-twitter.svg %}</span>
+          <span class="username">schmidtwisser</span>
+        </a>
+      </li>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>
-            Gregor Schmidt<br/>
-            Dolziger Straße 3<br/>
-            10247 Berlin<br/><br/>
-          </li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
+      <li>
+        <a href="https://www.xing.com/profile/Gregor_Schmidt3">
+          <span class="icon">{% include icon-xing.svg %}</span>
+          <span class="username">Gregor Schmidt</span>
+        </a>
+      </li>
 
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          <li>
-            <a href="http://www.nach-vorne.eu/">
-              <span class="icon">{% include icon-home.svg %}</span>
-              <span class="username">nach-vorne.eu</span>
-            </a>
-          </li>
+      <li>
+        <a href="http://www.linkedin.com/in/schmidtwisser">
+          <span class="icon">{% include icon-linkedin.svg %}</span>
+          <span class="username">schmidtwisser</span>
+        </a>
+      </li>
 
-          <li>
-            <a href="https://www.xing.com/profile/Gregor_Schmidt3">
-              <span class="icon">{% include icon-xing.svg %}</span>
-              <span class="username">Gregor Schmidt</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="http://www.linkedin.com/in/schmidtwisser">
-              <span class="icon">{% include icon-linkedin.svg %}</span>
-              <span class="username">schmidtwisser</span>
-            </a>
-          </li>
-
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
+    </ul>
   </div>
-
 </footer>
