Add cta and legal notice

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -350,3 +350,13 @@
     padding: 0px;
   }
 }
+
+.cta {
+  font-size: 18px;
+  width: 100%;
+  line-height: 2em;
+  background: $brand-color;
+  border: none;
+  color: white;
+  border-radius: 5px;
+}
