--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -299,22 +299,27 @@
   z-index: -1;
 
   min-height: calc( (50vw + 50px) / 1.5);
+  max-height: 700px;
 
   background-image: url("/img/me.jpg");
   background-size: auto 100% ;
   background-repeat: no-repeat;
+  background-position: -60px 0;
 }
 
 .feature-spacer {
   height: calc(100vh - 62px - 60px);
   min-height: calc( (50vw + 50px) / 1.5 - 60px);
+  max-height: calc(700px - 60px);
   float:left;
 }
 
 .feature-content {
   margin-left: calc(50% + 50px);
   padding-left: 30px;
-  min-height: calc(100vh - 62px - 60px);
+  height: calc(100vh - 62px - 60px);
+  min-height: calc( (50vw + 50px) / 1.5 - 60px);
+  max-height: calc(700px - 60px);
 
   display: flex;
   align-items: center;
@@ -336,6 +341,8 @@
     margin: 0px;
     padding: 0px 30px;
     min-height: auto;
+    height: auto;
+    max-height: auto;
   }
 }
 @include media-query($on-palm) {
@@ -354,9 +361,19 @@
 .cta {
   font-size: 18px;
   width: 100%;
+  max-width: 400px;
+  margin: auto;
+  display: block;
   line-height: 2em;
   background: $brand-color;
   border: none;
   color: white;
+  border-radius: 5px;
+}
+
+.hireme {
+  padding: 30px;
+  margin: -10px -30px;
+  background: $grey-color-light;
   border-radius: 5px;
 }
