--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,9 +6,6 @@ layout: default
 <div class="feature-spacer"></div>
 <div class="feature-content">
   <div>
-    <p>{{ site.description }}</p>
-    <form action="/portfolio">
-      <button class="cta">See my portfolio</button>
-    </form>
+    {{ content }}
   </div>
 </div>
