--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -298,7 +298,7 @@
 
   z-index: -1;
 
-  min-height: calc( (50vw + 50px) / 1.5);
+  min-height: calc( (50vw + 50px) / 1.5 + 60px);
   max-height: 700px;
 
   background-image: url("/img/me.jpg");
@@ -309,7 +309,7 @@
 
 .feature-spacer {
   height: calc(100vh - 62px - 60px);
-  min-height: calc( (50vw + 50px) / 1.5 - 60px);
+  min-height: calc( (50vw + 50px) / 1.5);
   max-height: calc(700px - 60px);
   float:left;
 }
@@ -318,7 +318,7 @@
   margin-left: calc(50% + 50px);
   padding-left: 30px;
   height: calc(100vh - 62px - 60px);
-  min-height: calc( (50vw + 50px) / 1.5 - 60px);
+  min-height: calc( (50vw + 50px) / 1.5);
   max-height: calc(700px - 60px);
 
   display: flex;
@@ -327,15 +327,15 @@
 
 @include media-query($on-laptop) {
   .feature-image {
-    position: absolute;
+    position: static;
+    margin: -30px -30px 30px;
     width: 100vw;
     height: 300px;
     background-position: center;
     background-size: cover;
   }
   .feature-spacer {
-    float: none;
-    height: calc(300px);
+    display: none;;
   }
   .feature-content {
     margin: 0px;
@@ -348,10 +348,7 @@
 @include media-query($on-palm) {
   .feature-image {
     height: 250px;
-  }
-  .feature-spacer {
-    float: none;
-    height: calc(250px);
+    margin: -30px -15px 30px;
   }
   .feature-content {
     padding: 0px;
@@ -373,7 +370,7 @@
 
 .hireme {
   padding: 30px;
-  margin: -10px -30px;
+  margin: 30px -30px;
   background: $grey-color-light;
   border-radius: 5px;
 }
