--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,16 +35,40 @@
 </footer>
 
 <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-32509964-1']);
-  _gaq.push(['_trackPageview']);
+  (function () {
+    var gaProperty = "UA-32509964-1",
+        disableStr = 'ga-disable-' + gaProperty,
+        gaq = window._gaq || [];
 
-  (function() {
-    var ga = document.createElement('script');
-    ga.type = 'text/javascript';
-    ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(ga, s);
+    var gaOptout = function () {
+      document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
+      window[disableStr] = true;
+    }
+
+    var gaInstall = function () {
+      var ga = document.createElement('script');
+      ga.type = 'text/javascript';
+      ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') +
+               '.google-analytics.com/ga.js';
+
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(ga, s);
+    };
+
+    gaq.push(['_setAccount', gaProperty]);
+    gaq.push(['_gat._anonymizeIp']);
+    gaq.push(['_gat._forceSSL']);
+    gaq.push(['_trackPageview']);
+
+    if (document.cookie.indexOf(disableStr + '=true') > -1) {
+      window[disableStr] = true;
+    }
+    else {
+      gaInstall();
+    }
+
+    window._gaq = gaq;
+    window.gaOptout = gaOptout;
   })();
 </script>
