--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,16 +41,21 @@
         gaq = window._gaq || [];
 
     var gaOptout = function () {
-      document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
-      window[disableStr] = true;
+      if ( window[disableStr] === true) {
+        alert("Google Analytics tracking has been disabled earlier.");
+      }
+      else {
+        document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
+        window[disableStr] = true;
+        alert("Thank you for your understanding.\n\nGoogle Analytics is now disabled.");
+      }
     }
 
     var gaInstall = function () {
       var ga = document.createElement('script');
       ga.type = 'text/javascript';
       ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') +
-               '.google-analytics.com/ga.js';
+      ga.src = 'https://ssl.google-analytics.com/ga.js';
 
       var s = document.getElementsByTagName('script')[0];
       s.parentNode.insertBefore(ga, s);
