--- a/_includes/hireme.html
+++ b/_includes/hireme.html
@@ -3,7 +3,7 @@
 
   <p>
     If your interested in more of my previous work have a look at
-    <a href="{{ "/portfolio/index" | prepend: site.baseurl }}">the portfolio</a>. I would
+    <a href="{{ "/portfolio/overview" | prepend: site.baseurl }}">the portfolio</a>. I would
     love to hear, how I may help you.
   </p>
 
