--- a/_includes/hireme.html
+++ b/_includes/hireme.html
@@ -3,8 +3,9 @@
 
   <p>
     If your interested in more of my previous work have a look at
-    <a href="{{ "/portfolio/overview" | prepend: site.baseurl }}">the portfolio</a>. I would
-    love to hear, how I may help you.
+    <a href="{{ "/portfolio/overview" | prepend: site.baseurl }}">the portfolio</a>.
+    I have also published <a href="{{ "/rates" | prepend: site.baseurl }}">my
+    rates</a> for everybody to see. I would love to hear, how I may help you.
   </p>
 
   <form action="mailto:schmidt@nach-vorne.eu?subject=Let's%20talk!">
