Adding prev/next links to blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,4 +16,13 @@ layout: default
   </div>
 </article>
 
+<div class="previous-next">
+  {% if page.previous.url %}
+    <a class="previous" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
+
 {% include author.html %}
