--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -414,6 +414,19 @@
   margin-bottom: $spacing-unit / 2;
 }
 
+
+.post-content .cv-image {
+  float: right;
+  width: 200px;
+  padding: 0;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: $spacing-unit / 2;
+  margin-bottom: $spacing-unit / 2;
+  border: none;
+  border-radius: 0;
+}
+
 .previous-next {
   padding: $spacing-unit / 2 0;
 
@@ -454,5 +467,15 @@
       margin-left: 0;
       text-align: right;
     }
+  }
+}
+
+.text-muted {
+  color: $grey-color;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  small {
+    @extend .text-muted;
   }
 }
