--- a/_includes/author.html
+++ b/_includes/author.html
@@ -15,8 +15,8 @@
 
   <p>
     If your interested in more of my previous work have a look at
-    <a href="{{ "/portfolio/overview" | prepend: site.baseurl }}">my portfolio</a>.
-    I have also published <a href="{{ "/rates" | prepend: site.baseurl }}">my
+    <a href="{{ "/portfolio/overview/" | prepend: site.baseurl }}">my portfolio</a>.
+    I have also published <a href="{{ "/rates/" | prepend: site.baseurl }}">my
     rates</a> for everybody to see. I would love to hear, how I may help you.
   </p>
 
