overview is no longer overview

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,4 +1,5 @@
 <div class="hireme">
+
   <img class="author-image" src="{{ "/img/me-square.jpg" | prepend: site.baseurl }}" alt=""/>
 
   <p>
@@ -15,7 +16,7 @@
 
   <p>
     If your interested in more of my previous work have a look at
-    <a href="{{ "/portfolio/overview/" | prepend: site.baseurl }}">my portfolio</a>.
+    <a href="{{ "/portfolio/" | prepend: site.baseurl }}">my portfolio</a>.
     I have also published <a href="{{ "/rates/" | prepend: site.baseurl }}">my
     rates</a> for everybody to see. I would love to hear, how I may help you.
   </p>
