Replace mailto forms with links
to avoid mixed content warnings on https site

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -373,8 +373,14 @@
   line-height: 2em;
   background: $brand-color;
   border: none;
-  color: white;
+  color: white !important;
   border-radius: 5px;
+
+  text-align: center;
+}
+.cta:hover {
+  color: white;
+  text-decoration: none;
 }
 
 .hireme {
