--- a/_includes/author.html
+++ b/_includes/author.html
@@ -21,9 +21,9 @@
     rates</a> for everybody to see. I would love to hear, how I may help you.
   </p>
 
-  <form action="mailto:schmidt@nach-vorne.eu?subject=Let's%20talk!">
-    <button type="submit" class="cta">
+  <p>
+    <a class="cta" href="mailto:schmidt@nach-vorne.eu?subject=Let's%20talk!">
       Just send a mail
-    </button>
-  </form>
+    </a>
+  </p>
 </div>
